--- a/martianbank-helm-chart/templates/mongodb.yaml
+++ b/martianbank-helm-chart/templates/mongodb.yaml
@@ -25,12 +25,12 @@ spec:
           - name: MONGO_INITDB_ROOT_USERNAME
             valueFrom:
               secretKeyRef:
-                name: martianbanktest-mongodb-secret
+                name: mongodb-secret
                 key: mongodb-root-username
           - name: MONGO_INITDB_ROOT_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: martianbanktest-mongodb-secret
+                name: mongodb-secret
                 key: mongodb-root-password
       volumes:
       - name: mo-data
