--- a/martianbank-helm-chart/templates/transactions.yaml
+++ b/martianbank-helm-chart/templates/transactions.yaml
@@ -1,3 +1,4 @@
+# transactions
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -16,7 +17,7 @@ spec:
                 app: transactions
         spec:
             initContainers:
-            #During this Pod's initialization, check that mongodb service is up and running before starting this pod
+            # During this Pod's initialization, check that mongodb service is up and running before starting this pod
                 - name: check-message-bus-ready
                   image: busybox:latest
                   command: ['sh', '-c', 'until nc -vz mongodb 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
@@ -25,11 +26,16 @@ spec:
                   image: devopsxkeepcoding/martian-bank:transactions-1.3.0
                   imagePullPolicy: Always
                   envFrom:
-                    - configMapRef:
-                        name: configmap-martianbank
+                    - secretRef:
+                        name: mongodb-secret
                   env:
+                    - name: DB_URL
+                      valueFrom:
+                        secretKeyRef:
+                          name: mongodb-secret
+                          key: DB_URL
                     - name: SERVICE_PROTOCOL
-                      value: {{.Values.SERVICE_PROTOCOL}}      
+                      value: {{ .Values.SERVICE_PROTOCOL }}      
                   livenessProbe:
                     tcpSocket:
                         port: 50052
