--- a/.github/workflows/cd-argocd.yml
+++ b/.github/workflows/cd-argocd.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - feature/argocd-setup
+      - develop
 jobs:
   deploy:
     runs-on: ubuntu-latest
