--- a/argocd-config/martian-bank-app.yaml
+++ b/argocd-config/martian-bank-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/devopsx-keepcoding/martian-bank.git'
-    targetRevision: feature/argocd-setup
+    targetRevision: develop
     path: martianbank-helm-chart
   destination:
     server: 'https://kubernetes.default.svc'
